# NumericalOptim

./: .gitignore  CMakeLists.txt  README.md
include/: optim.h
include/line_search/: LineSearchMoreThuente.h
include/unconstrained/: lbfgs.h  lbfgsMat.h  newton.h  unconsrained_all.h
include/unconstrained/GradientDescent/: gd.h
include/unconstrained/LBFGS/: lbfgs.h  lbfgsMat.h
include/unconstrained/Newton/: newton.h
include/utils/: geometry.h  optim_settings.h
src/: main.cpp
src/line_search/: LineSearchMoreThuente.cpp
src/unconstrained/: lbfgsMat.cpp  newton.cpp
src/unconstrained/LBFGS/: lbfgsMat.cpp
src/unconstrained/Newton/: newton.cpp
